[package]
name = "my-microservices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "auth"
path = "src/auth-service/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "health-check"
path = "src/health-check-service/main.rs"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
pbkdf2 = { version = "0.12.1", features = ["simple"] }
prost = "0.11.9"
rand_core = { version = "0.6.4", features = ["std"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "time"] }
tonic = "0.9.2"
uuid = { version = "1.3.3", features = ["v4"] }

[build-dependencies]
tonic-build = "0.9.2"
